--- a/model/seed_cart.yaml
+++ b/model/seed_cart.yaml
@@ -1,15 +1,25 @@
-- id: 1
-  list_price: 12
-  sale_price: 20
+- id: 0
+  listprice: 22
+  saleprice: 25
   quantity: 100
   items: 
-    - id: 1
-      cart_id: 1
+    - id: 0
+      cartid: 1
       quantity: 10
-      list_price: 11
-      sale_price: 21
-      discount: 5
+      listprice: 11
+      saleprice: 12
       sku: 
        id: 1
        name: "beef"
-       list_price: 25
+       listprice: 11
+       saleprice: 12
+    - id: 0
+      cartid: 1
+      quantity: 90
+      listprice: 11
+      saleprice: 13
+      sku: 
+       id: 1
+       name: "beef"
+       listprice: 11
+       saleprice: 13
